--- a/app/src/main/res/layout/activity_test_data.xml
+++ b/app/src/main/res/layout/activity_test_data.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
+        <EditText
             tools:text="Debug text"
             android:id="@+id/tv_test_data"
             android:textColor="@color/colorBlack"
